--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -12,14 +12,16 @@
     width: 50%;
 }
 
-.button{
+.btn{
     color: white;
+    width: 100%;
     height: 6%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.button:hover{
-    border: 1px solid;
+.btn:hover{
+    
+    background-color: #374149;
 }
